pkg/lang/testdata/ub/inputs/invalid/default-below-minimum.ub
inputs: {
  size: { type: integer, default: 0, minimum: 1 }
}
